Fix loading clipped in firefox

--- a/components/shared/Loading/Loading.module.scss
+++ b/components/shared/Loading/Loading.module.scss
@@ -17,7 +17,7 @@ $dot-after-color: $dot-color !default;
 
 $dot-spacing: $dot-width + $dot-width/2 !default;
 
-$left-pos: -9999px;
+$left-pos: 0;
 $x1: -$left-pos - $dot-spacing;
 $x2: -$left-pos;
 $x3: -$left-pos + $dot-spacing;
@@ -34,6 +34,10 @@ $x3: -$left-pos + $dot-spacing;
   border-radius: $radius;
   background-color: $bg-color;
   color: $color;
+}
+
+.container {
+  margin: 1.25rem auto;
 }
 
 .dot-typing {
